[package]
name = "statistics-4you"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
const_format = "0.2"
env_logger = "0.11"
futures = "0.3"
log = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["http2", "charset", "hickory-dns", "system-proxy", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
